# copper-substrate

./: .gitignore  Cargo.toml  README.md
crates/exporters/: Cargo.toml
crates/exporters/src/: kicad_pcb_export.rs  lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs  main.rs
crates/substrate/: Cargo.toml
crates/substrate/src/: board_interface.rs  courtyard.rs  layer_type.rs  lib.rs  package_types.rs  prelude.rs
examples/: capacitor.rs  resistor.rs
src/: lib.rs
src/exporters/: kicad_pcb_export.rs  mod.rs
src/substrate/: board_interface.rs  courtyard.rs  functional_types.rs  prelude.rs
