[package]
name = "copper-exporters"
version = "0.1.0"
edition = "2024"

[dependencies]
copper-substrate = { path = "../substrate" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[[example]]
name = "capacitor"
path = "../../examples/capacitor.rs"

[[example]]
name = "resistor"
path = "../../examples/resistor.rs"